# advent-of-code-2019

./: .gitignore  LICENSE  init.py  old_init.py  template.ipynb
2019/03/: code.py
2019/06/: statement.md
2019/07/: perm.js
2019/09/: day9.js  intcode.js
2019/10/: day10.js
2019/3/: statement.html  statement.md
2019/5/: day5.js  intcode.js  statement.md
2019/6/: code.py
2019/7/: day7.js  statement.md
2021/: 2.js  3.js
2021/day01/: 1.js  1.ws  1.wsa
2021/day03/: 3.js  day03-walrus-abuse.py
2021/day04/: 4.js  day04.ipynb
2021/day05/: day05.ipynb  day05.py
2021/day06/: day06.ipynb  day06.py
2021/day07/: day07.ipynb  day07.py
2021/day08/: Untitled.ipynb  day08.ipynb
2021/day09/: day09.js
2021/day10/: day10.py
2021/day11/: day11.js
2021/day12/: day12.js
2021/day13/: day13.ipynb
2021/day14/: day14.js
2021/day15/: day15.py
2021/day16/: day16.py  sample.txt
2021/day17/: day17.py
2021/day18/: day18.py  day18_oli_explode.py
2021/day19/: day19.py  points.py
2021/day20/: day20.py
2023/1/: code.js
2023/2/: code.js
2023/3/: code.js
2023/4/: code.py
2023/5/: day5.ipynb
2023/7/: day7.ipynb
lib/python/: LICENSE  pyproject.toml
lib/python/alchzh_aoc_helpers/: __init__.py  aliases.py  nb.py  numpy.py
