[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "alchzh_aoc_helpers"
authors = [{name = "Albert Zhang", email = "alchzh@gmail.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "dotmap ~=1.3.30"
]

[project.urls]
Home = "https://github.com/alchzh/advent-of-code/tree/master/lib/python"


[project.optional-dependencies]
nb = ["ipywidgets"]
aocd = ["advent-of-code-data"]
numpy = ["numpy"]
